--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.4.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-tasks.named('test') {
+test {
     useTestNG()
 }
